fixed spacing for loginsignup forms

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -111,7 +111,7 @@ form.left{
   width: 40%;
   margin-top: 6%;
   margin-bottom: auto;
-  margin-left: 5%;
+  margin-left: 10%;
   margin-right: 5%
 }
 
@@ -121,7 +121,7 @@ form.right{
   margin-top:auto;
   margin-bottom:auto;
   margin-left: 5%;
-  margin-right: 5%
+  margin-right:3%
 
 }
 
